<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cleff</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sort">Sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_scan">Rescan Library</string>
    <string name="empty_data_set">No songs were found :(</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="placeholder_text">Placeholder test</string>
    <!-- Default name of album that doesn't have a name in the metadata -->
    <string name="unknown_album_name">Unknown album</string>
    <!-- Default name of song title that doesn't have a name in the metadata -->
    <string name="unknown_title_name">Unknown album</string>
    <string name="unknown_genre_name">Unknown genre</string>

    <!-- Library Scanner -->
    <string name="building_library_title">Building Library…</string>
    <string name="building_library_message">Please wait while Cleff scans your device for music.</string>

    <string name="search_box_library_title">Search library</string>
    <!-- Sort menu -->
    <string name="sort_songs_name">Name</string>
    <string name="sort_songs_artist">Artist</string>
    <string name="sort_songs_album">Album</string>
    <string name="sort_songs_date_added">Date Added</string>
    <string name="sort_songs_genre">Genre</string>
    <string name="sort_songs_time">Time</string>

    <!-- Player -->
    <string name="title_activity_player">PlayerActivity</string>
    <string name="player_added_to_faves">Song added to favorites</string>
    <!-- Song actions -->
    <string name="song_faved">Song added to favorites</string>

    <!-- Albums -->
    <string name="album_song_count">"Songs: "</string>

    <!-- Nav Drawer Menu Items-->
    <string name="nav_drawer_library_title">Library</string>
    <string name="nav_drawer_favorite_title">Favorites</string>
    <string name="nav_drawer_queue_title">Queue</string>
    <string name="nav_drawer_recent_title">Recent</string>
    <string name="nav_drawer_total_title">Songs</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_feedback">Feedback</string>


    <array name="nav_bar_titles">
        <item>Library</item>
        <item>Favorite</item>
        <item>Queue</item>
        <item>Recent</item>
    </array>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>
