<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:minHeight="?attr/actionBarSize"
      tools:context=".MainActivity">

    <item android:id="@+id/action_sort"
          android:title="@string/action_sort"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_action_sort">

        <!-- Sort submenu -->
        <menu xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto">

            <item android:id="@+id/action_sort_by_album"
                  android:title="@string/sort_songs_album"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>

            <item android:id="@+id/action_sort_by_artist"
                  android:title="@string/sort_songs_artist"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>

            <item android:id="@+id/action_sort_by_name"
                  android:title="@string/sort_songs_name"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>

            <item android:id="@+id/action_sort_by_date_added"
                  android:title="@string/sort_songs_date_added"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>

            <item android:id="@+id/action_sort_by_time"
                  android:title="@string/sort_songs_time"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>
        </menu>
    </item>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
